--- a/ProyectoFinal-Aplicada2/Pages/ConsultaClientes.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaClientes.razor
@@ -23,17 +23,21 @@
     </AuthorizeView>
 </CascadingAuthenticationState>
 
+<style>
+    . {
+    }
+
+        .Azul {
+            color: #0094ff;
+        }
+</style>
+
 @if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
 {
     <h3>Consulta de Clientes</h3>
 
 
     <div class="form-row">
-
-      
-        <div class="col">
-            <button class="btn btn-dark" type="button" @onclick="Saltar">Pag. Siguiente</button>
-        </div>
 
         <div class="col">
             <input type="text" class="form-control" placeholder="Criterio" @onfocusin="Filtrar" @onfocusout="Filtrar" @onclick="Filtrar" @bind="Criterio" />
@@ -46,7 +50,7 @@
                 <option value="2">Nombres</option>
                 <option value="3">Apellidos</option>
                 <option value="4">Teléfono o celular</option>
-                <option value="5">Dirección</option>         
+                <option value="5">Dirección</option>
             </select>
         </div>
     </div>
@@ -76,7 +80,7 @@
                     <tr>
                         <td>@item.ClienteId</td>
                         <td>@item.Nombres</td>
-                        <td>@item.Apellidos</td>                  
+                        <td>@item.Apellidos</td>
                         <td>@item.Numero</td>
                         <td>@item.Direccion</td>
                         <td><a class="btn btn-outline-info" href="ConsultaClientes/@item.ClienteId">Ver</a></td>
@@ -91,9 +95,9 @@
         <ul class="pagination pagination-lg">
             @for (int i = 1; i <= totaldepaginas; i++)
             {
-                <li class="page-item"><a class="page-link" @onclick="OnInitialized" href="ConsultaClientes/@i">@i</a></li>
+                <li class="page-item Azul"><a class="page-link Azul" @onclick="OnInitialized" href="ConsultaClientes/@i">@i</a></li>
             }
-
+            <li class="page-item Azul"><a class="page-link Azul" @onclick="Saltar"> ► </a></li>
         </ul>
     </nav>
 }
@@ -146,11 +150,11 @@
     private string filtro;
     private string Criterio;
 
-   
+
 
     public List<Clientes> listado { get; set; }
 
-  
+
     private void Filtrar()
     {
 
