--- a/ProyectoFinal-Aplicada2/Pages/ConsultaPagos.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaPagos.razor
@@ -22,6 +22,15 @@
     </AuthorizeView>
 </CascadingAuthenticationState>
 
+<style>
+    . {
+    }
+
+        .Azul {
+            color: #0094ff;
+        }
+</style>
+
 @if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
 {
     <h3>Consulta de Pagos</h3>
@@ -40,9 +49,6 @@
             <button class="btn btn-primary" id="filtar_buton" @onclick="filtradoPorFecha">Filtar por Fecha</button>
         </div>
 
-        <div class="col">
-            <button class="btn btn-dark" type="button" @onclick="Saltar">Pag. Siguiente</button>
-        </div>
         <div class="col">
             <input type="text" class="form-control" placeholder="Criterio" @onfocusin="Filtrar" @onfocusout="Filtrar" @onclick="Filtrar" @bind="Criterio" />
         </div>
@@ -93,20 +99,20 @@
         <ul class="pagination pagination-lg">
             @for (int i = 1; i <= totaldepaginas; i++)
             {
-                <li class="page-item"><a class="page-link" @onclick="OnInitialized" href="ConsultaPagos/@i">@i</a></li>
+                <li class="page-item Azul"><a class="page-link Azul" @onclick="OnInitialized" href="ConsultaPagos/@i">@i</a></li>
             }
-
+            <li class="page-item Azul"><a class="page-link Azul" @onclick="Saltar"> ► </a></li>
         </ul>
     </nav>
 }
 
-    @code {
-        List<Pagos> Lista = new List<Pagos>();
-        double conteo = 0;
-        double totaldepaginas = 0;
-        Contexto contexto = new Contexto();
-        Paginacion paginacion = new Paginacion();
-public int Contador { get; set; }
+@code {
+    List<Pagos> Lista = new List<Pagos>();
+    double conteo = 0;
+    double totaldepaginas = 0;
+    Contexto contexto = new Contexto();
+    Paginacion paginacion = new Paginacion();
+    public int Contador { get; set; }
 
     [Parameter]
     public int I { get; set; }
@@ -219,4 +225,4 @@ public int Contador { get; set; }
         }
     }
 
-    }
+}
