Trabajando con el login

--- a/ProyectoFinal-Aplicada2/Pages/LoginControl.razor
+++ b/ProyectoFinal-Aplicada2/Pages/LoginControl.razor
@@ -30,10 +30,20 @@
 @code {
     string Username = "";
     string Password = "";
+
+
+
+
+
     private string encode(string param)
     {
 
+        if(usuariocontroller.VerificarExistenciaYClaveDelUsuario(Username,Password)==false)
+        {
+            return "No se pude";
+        }
+
+
         return HttpUtility.UrlEncode(param);
-        
     }
 }
