--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -31,7 +31,7 @@
     }
 
     .form-register {
-        width: 800px;
+        width: 650px;
         background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
         padding: 30px;
         margin: auto;
@@ -120,8 +120,15 @@
 
             <div class="col">
                 <label for="PrecioCompra">Precio de compra</label>
-                <InputNumber @bind-Value="productos.PrecioCompra" class="form-control"></InputNumber>
-                <button class="btn btn-info" @onclick="AgregarProducto" type="button">Agregar</button>
+                <div class="input-group">
+                    <InputNumber @bind-Value="productos.PrecioCompra" class="form-control"></InputNumber>
+                    <div class="input-group-append">
+                        <button class="btn btn-info" @onclick="AgregarProducto" type="button">Agregar</button>
+                        <div />
+                        <div />
+                        <div />
+                    </div>
+                </div>
             </div>
         </div>
         <br />
