--- a/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
@@ -31,7 +31,7 @@
     }
 
     .form-register {
-        width: 800px;
+        width: 650px;
         background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
         padding: 30px;
         margin: auto;
@@ -108,8 +108,17 @@
 
                 <div class="col">
                     <label for="precio">Precio</label>
-                    <InputNumber id="precio" class="form-control" @bind-Value="precioVenta" ReadOnly="True"></InputNumber>
-                    <button type="button" class="btn btn-info" @onclick="AgregarProducto">Agregar</button>
+                    <div>
+                        <div class="input-group">
+                            <InputNumber id="precio" class="form-control" @bind-Value="precioVenta" ReadOnly="True"></InputNumber>
+                            <div class="input-group-append">
+                                <button type="button" class="btn btn-info" @onclick="AgregarProducto">Agregar</button>
+                                <div />
+                                <div />
+                                <div />
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <br />
