--- a/ProyectoFinal-Aplicada2/Shared/LoginDisplay.razor
+++ b/ProyectoFinal-Aplicada2/Shared/LoginDisplay.razor
@@ -9,6 +9,6 @@
 
     <NotAuthorized>
         <a href="Identity/Account/Register">Register</a>
-        <a href="Identity/Account/Login">login</a>
+        @*<a href="Identity/Account/Login">login</a>*@
     </NotAuthorized>
 </AuthorizeView>
