--- a/ProyectoFinal-Aplicada2/Pages/LoginControl.razor
+++ b/ProyectoFinal-Aplicada2/Pages/LoginControl.razor
@@ -1,4 +1,5 @@
 ﻿@page "/loginControl"
+@inject NavigationManager navigator
 @using System.Web;
 
     <CascadingAuthenticationState>
@@ -7,7 +8,7 @@
 
         <AuthorizeView>
             <Authorized>
-                <b>Hello, @context.User.Identity.Name!</b>
+                <b>Hola, @context.User.Identity.Name!</b>
                 <a class="ml-md-auto btn btn-primary"
                    href="/logout?returnUrl=/"
                    target="_top">Logout</a>
@@ -20,8 +21,8 @@
                 <input type="password"
                        placeholder="Password"
                        @bind="@Password" />
-                <a class="ml-md-auto btn btn-primary"
-                   href="/login?paramUsername=@encode(@Username)&paramPassword=@encode(@Password)"
+                <a class="ml-md-auto btn btn-primary" 
+                    @onclick="Validando"
                    target="_top">Login</a>
             </NotAuthorized>
         </AuthorizeView>
@@ -30,14 +31,69 @@
 @code {
     string Username = "";
     string Password = "";
-
-
-
-
-
+    string ReturnUrl;
     private string encode(string param)
     {
 
+        if(Username == "dfgdfg")
+        {
+            navigator.NavigateTo("sdf");
+        }
+
         return HttpUtility.UrlEncode(param);
     }
+
+    private bool Verifica()
+    {
+        bool paso = true;
+
+        paso = usuariocontroller.VerificarExistenciaYClaveDelUsuario(Username, Password);
+
+
+        if(!paso)
+        {
+            paso = false;
+            return paso;
+        }
+        return paso;
+
+    }
+
+    private void Validando()
+    {
+        if(Username=="admin" && Password=="12345")
+        {
+            navigator.NavigateTo("/login?paramUsername=@encode(@Username)&paramPassword=@encode(@Password)");
+        } else
+        {
+            List<Usuarios> ListaUsurios = new List<Usuarios>();
+            ListaUsurios = usuariocontroller.GetList(p => true);
+            if(ListaUsurios.Count == 0)
+            {
+                toastService.ShowError("No hay usuarios creados", "Error!");
+                return;
+            } else
+            {
+                bool paso = false;
+                foreach (var item in ListaUsurios)
+                {
+                    if(item.NombreUsuario == Username && item.Clave == Password)
+                    {
+                        paso = true;
+                        break;
+                    }
+                }
+                if(!paso)
+                {
+                    toastService.ShowError("El nombre o clave son incorrectos", "Error!");
+                    return;
+                } else
+                {
+                     navigator.NavigateTo("/login?paramUsername=@encode(@Username)&paramPassword=@encode(@Password)");
+                }
+            }
+
+        }
+    }
+
 }
