--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -100,6 +100,7 @@
             <div class="form-group">
                 <label for="nivelusuario">Nivel de Usuario</label>
                 <InputSelect id="nivelusuario" class="form-control" @bind-Value="@usuarios.NivelUsuario">
+                    <option value="">Elija un nivel</option>
                     <option value="Administrador">Administrador</option>
                     <option value="Contador">Contador</option>
                     <option value="Cajero">Cajero</option>
