A ver si funciona el nivel de usuario

--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -57,7 +57,7 @@
     }
 </style>
 
-@if(AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
+@if(AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated&&NivelDeUsuario)
 {
     <section class="form-register">
         <h3>Usuarios</h3>
