Control de usuario hecho

--- a/ProyectoFinal-Aplicada2/Pages/CategoriasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/CategoriasComponent.razor
@@ -19,6 +19,25 @@
                 </div>
             </div>
         </NotAuthorized>
+
+        <Authorized>
+            @if (NivelDeUsuario)
+            {
+                <div class="card text-center">
+                    <div class="card-header">
+                        No Autorizado
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Atención</h5>
+                        <p class="card-text">Usted no tiene nivel suficiente para acceder aquí.</p>
+                        <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                    </div>
+                </div>
+            }
+
+        </Authorized>
     </AuthorizeView>
 </CascadingAuthenticationState>
 
@@ -48,7 +67,7 @@
 </style>
 
 
-@if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
+@if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated && NivelDeUsuario == false)
 {
 <section class="form-register">
     <h3>Categorias</h3>
@@ -86,12 +105,14 @@
 
     Categorias categoria = new Categorias();
 
+    private bool NivelDeUsuario;
     protected override void OnInitialized()
     {
         if (Id > 0)
         {
             categoria = categoriascontrollers.Buscar(Id);
         }
+        NivelDeUsuario = AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.IsInRole("Cajero");
     }
 
     private void Guardar()
