--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -19,6 +19,24 @@
                 </div>
             </div>
         </NotAuthorized>
+        <Authorized>
+            @if (NivelDeUsuario)
+            {
+                <div class="card text-center">
+                    <div class="card-header">
+                        No Autorizado
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Atención</h5>
+                        <p class="card-text">Usted no tiene nivel suficiente para acceder aquí.</p>
+                        <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                    </div>
+                </div>
+            }
+
+        </Authorized>
     </AuthorizeView>
 </CascadingAuthenticationState>
 
@@ -48,7 +66,7 @@
 </style>
 
 
-@if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
+@if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated && NivelDeUsuario == false )
 {
 <section class="form-register">
     <h3>Compras</h3>
@@ -202,6 +220,7 @@
     [Parameter]
     public int Id { get; set; }
 
+    private bool NivelDeUsuario;
     protected override void OnInitialized()
     {
         if (Id > 0)
@@ -209,6 +228,7 @@
             compras = comprascontroller.Buscar(Id);
         }
 
+        NivelDeUsuario = AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.IsInRole("Cajero");
         listaProductos = productoscontrollers.GetList(p => true);
         ProveedorLista = proveedorescontrollers.GetList(p => true);
         productos = new Productos();
