--- a/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
@@ -19,6 +19,25 @@
                 </div>
             </div>
         </NotAuthorized>
+
+        <Authorized>
+            @if (NivelDeUsuario)
+            {
+                <div class="card text-center">
+                    <div class="card-header">
+                        No Autorizado
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Atención</h5>
+                        <p class="card-text">Usted no tiene nivel suficiente para acceder aquí.</p>
+                        <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                    </div>
+                </div>
+            }
+
+        </Authorized>
     </AuthorizeView>
 </CascadingAuthenticationState>
 
@@ -47,7 +66,7 @@
     }
 </style>
 
-@if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
+@if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated && NivelDeUsuario == false)
 {
     <section class="form-register">
 
@@ -134,6 +153,7 @@
 
     private List<Categorias> ListaCategorias = new List<Categorias>();
 
+    private bool NivelDeUsuario;
     protected override void OnInitialized()
     {
         if (Id > 0)
@@ -141,6 +161,7 @@
             productos = productoscontrollers.Buscar(Id);
         }
         ListaCategorias = categoriascontrollers.GetList(P => true);
+        NivelDeUsuario = AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.IsInRole("Cajero");
     }
 
     private void Nuevo()
