--- a/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
@@ -140,32 +140,34 @@
             </div>
 
             <br />
-
-            <table class="table">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>Id</th>
-                        <th>PagoId</th>
-                        <th>CompraId</th>
-                        <th>Tipo de pago</th>
-                        <th>Pago</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody class="bg-white">
-                    @foreach (var item in pagos.PagosDetalles)
-                    {
+            <div class="table-responsive text-nowrap">
+                <table class="table table-striped">
+                    <thead class="thead-dark">
                         <tr>
-                            <td>@item.Id</td>
-                            <td>@item.PagoId</td>
-                            <td>@item.CompraId</td>
-                            <td>@item.TipoPago</td>
-                            <td>@item.Pago</td>
-                            <th><button class="btn btn-outline-danger" type="button" @onclick="(()=>EliminarDetalle(item))">Remover</button></th>
+                            <th>Id</th>
+                            <th>PagoId</th>
+                            <th>CompraId</th>
+                            <th>Tipo de pago</th>
+                            <th>Pago</th>
+                            <th></th>
                         </tr>
-                    }
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody class="bg-white">
+                        @foreach (var item in pagos.PagosDetalles)
+                        {
+                            <tr>
+                                <td>@item.Id</td>
+                                <td>@item.PagoId</td>
+                                <td>@item.CompraId</td>
+                                <td>@item.TipoPago</td>
+                                <td>@item.Pago</td>
+                                <th><button class="btn btn-outline-danger" type="button" @onclick="(()=>EliminarDetalle(item))">Remover</button></th>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+            
 
             <div class="form-group">
                 <label for="PagoTotal">Pago Total</label>
