--- a/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
@@ -123,37 +123,40 @@
             </div>
             <br />
 
-            <table class="table">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>Id</th>
-                        <th>VentaId</th>
-                        <th>ProductoId</th>
-                        <th>Nombre</th>
-                        <th>Cantidad</th>
-                        <th>PrecioVentas</th>
-                        <th>SubTotal</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody class="bg-white">
-                    @foreach (var item in ventas.VentasDetalles)
-                    {
+            <div class="table-responsive text-nowrap">
+                <table class="table table-striped">
+                    <thead class="thead-dark">
                         <tr>
-                            <td>@item.Id</td>
-                            <td>@item.VentaId</td>
-                            <td>@item.ProductoId</td>
-                            <td>@item.Nombre</td>
-                            <td>@item.Cantidad</td>
-                            <td>@item.PrecioVenta</td>
-                            <td>@item.SubTotal</td>
-                            <td><button type="button" class="btn btn-outline-danger" @onclick="(() => EliminarDetalle(item))">Remover</button></td>
+                            <th>Id</th>
+                            <th>VentaId</th>
+                            <th>ProductoId</th>
+                            <th>Nombre</th>
+                            <th>Cantidad</th>
+                            <th>PrecioVentas</th>
+                            <th>SubTotal</th>
+                            <th></th>
                         </tr>
-                    }
+                    </thead>
+                    <tbody class="bg-white">
+                        @foreach (var item in ventas.VentasDetalles)
+                        {
+                            <tr>
+                                <td>@item.Id</td>
+                                <td>@item.VentaId</td>
+                                <td>@item.ProductoId</td>
+                                <td>@item.Nombre</td>
+                                <td>@item.Cantidad</td>
+                                <td>@item.PrecioVenta</td>
+                                <td>@item.SubTotal</td>
+                                <td><button type="button" class="btn btn-outline-danger" @onclick="(() => EliminarDetalle(item))">Remover</button></td>
+                            </tr>
+                        }
 
-                </tbody>
+                    </tbody>
 
-            </table>
+                </table>
+            </div>
+           
 
             <div class="form-group">
                 <label for="total_v">Total</label>
