Arreglando Consultas de Clientes

--- a/ProyectoFinal-Aplicada2/Pages/ConsultaClientes.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaClientes.razor
@@ -83,7 +83,7 @@
                         <td>@item.Apellidos</td>
                         <td>@item.Numero</td>
                         <td>@item.Direccion</td>
-                        <td><a class="btn btn-outline-info" href="ConsultaClientes/@item.ClienteId">Ver</a></td>
+                        <td><a class="btn btn-outline-info" href="Clientes/@item.ClienteId">Ver</a></td>
                     </tr>
                 }
             </tbody>
