--- a/ProyectoFinal-Aplicada2/Pages/ConsultaProveedores.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaProveedores.razor
@@ -44,11 +44,11 @@
                 <option value="0">Todos</option>
                 <option value="1">Id</option>
                 <option value="2">Nombre Proveedor</option>
-                <option value="3">Telefono</option>
+                <option value="3">Teléfono</option>
                 <option value="4">Direcciones</option>
                 <option value="5">RNC</option>
-                <option value="6">TipoNegocio</option>
-                <option value="7">TipoMoneda</option>
+                <option value="6">Tipo Negocio</option>
+                <option value="7">Tipo Moneda</option>
             </select>
         </div>
     </div>
@@ -68,7 +68,7 @@
                     <th>Telefono</th>
                     <th>Dirección</th>
                     <th>RNC</th>
-                    <th>TipoNegocio</th>
+                    <th>Tipo de Negocio</th>
                     <th>Tipo moneda</th>
                     <th></th>
                 </tr>
