--- a/ProyectoFinal-Aplicada2/Pages/ConsultaClientes.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaClientes.razor
@@ -69,7 +69,7 @@
                     <th>Id</th>
                     <th>Nombre</th>
                     <th>Apellidos</th>
-                    <th>Numero</th>
+                    <th>Número</th>
                     <th>Dirección</th>
                     <th></th>
                 </tr>
@@ -190,14 +190,14 @@
                         Lista = listado;
                         break;
 
-                    //Cantidas
+                    //Cantidad
                     case 3:
 
                         listado = clientescontollers.GetList(p => p.Apellidos.Contains(Criterio));
                         Lista = listado;
 
                         break;
-                    //El telefono o el celular
+                    //El teléfono o el celular
                     case 4:
 
                         listado = clientescontollers.GetList(p => p.Numero.Contains(Criterio));
@@ -206,7 +206,7 @@
                         break;
                     //PorcentajeGanancias
                     case 5:
-                        listado = clientescontollers.GetList(p => p.Apellidos.Contains(Criterio));
+                        listado = clientescontollers.GetList(p => p.Direccion.Contains(Criterio));
                         Lista = listado;
                         break;
 
